pulldown-cmark-mdcat/tests/snapshots/render/iterm2@commonmark-spec-194-link_reference_definitions.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
assertion_line: 124
expression: "render_to_string(markdown_file, &iterm2_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/194-link_reference_definitions.md
---
]8;;file://HOSTNAME/WORKING_DIRECTORY/tests/markdown/commonmark-spec/my_(url)\[34mFoo[0m[34m*[0m[34mbar[0m[34m][0m]8;;\
